--- a/src/styles/Find.module.css
+++ b/src/styles/Find.module.css
@@ -1,228 +1,246 @@
 .FindTitle {
-    color: #000;
-    font-family: 'Noto Sans KR', sans-serif;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin: 40px 0;
+  color: #000;
+  font-family: 'Noto Sans KR', sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: 40px 0;
 }
 
 .pageContainer {
-    width: 619px;
-    height: 673px;
-    flex-shrink: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #FFFFFF;
+  width: 619px;
+  height: 673px;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
 }
 
 .tabContainer {
-    display: flex;
-    margin-bottom: 20px;
+  display: flex;
+  margin-bottom: 20px;
 }
 
 .tabButton {
-    display: flex;
-    width: 240px;
-    height: 60px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    flex-shrink: 0;
-    color: #848282;
-    font-family: Noto Sans KR, sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    background-color:#FFFFFF;
-    border: 1px solid #848282;
-    border-bottom: 3px solid #76ADAC;
-    cursor: pointer;
+  display: flex;
+  width: 240px;
+  height: 60px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex-shrink: 0;
+  color: #848282;
+  font-family:
+    Noto Sans KR,
+    sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  background-color: #ffffff;
+  border: 1px solid #848282;
+  border-bottom: 3px solid #76adac;
+  cursor: pointer;
 }
 
 .tabButton.activeTab {
-    border: 3px solid #76ADAC;
-    border-bottom: none;
-    color: #000;
+  border: 3px solid #76adac;
+  border-bottom: none;
+  color: #000;
 }
 
 .tabButton:hover {
-    border: 3px solid #76ADAC;
-    color: #000;
+  border: 3px solid #76adac;
+  color: #000;
 }
 
 .inputGroup {
-    margin-bottom: 20px;
-    width: 480px;
+  margin-bottom: 20px;
+  width: 480px;
 }
 
 .findText {
-    display: flex;
-    width: 480px;
-    flex-direction: column;
-    justify-content: center;
-    flex-shrink: 0;
-    color: #848282;
-    font-family: NOto Sans KR, sans-serif;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  display: flex;
+  width: 480px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: #848282;
+  font-family:
+    NOto Sans KR,
+    sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .input {
-    padding: 12px;
-    width: 480px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    font-size: 16px;
-    box-sizing: border-box;
+  padding: 12px;
+  width: 480px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  box-sizing: border-box;
 }
 
 .errorText {
-    color: red;
-    font-family: Noto Sans KR, sans-serif;
-    font-size: 14px;
-    margin-top: 5px;
+  color: red;
+  font-family:
+    Noto Sans KR,
+    sans-serif;
+  font-size: 14px;
+  margin-top: 5px;
 }
 
 .submitButton {
-    margin-top: 18px;
-    width: 480px;
-    border: none;
-    border-radius: 5px;
-    background-color: #76ADAC;
-    cursor: pointer;
-    display: flex;
-    height: 60px;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    flex-shrink: 0;
-    color: #FFF;
-    font-family: Noto Sans KR, sans-serif;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
+  margin-top: 18px;
+  width: 480px;
+  border: none;
+  border-radius: 5px;
+  background-color: #76adac;
+  cursor: pointer;
+  display: flex;
+  height: 60px;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  flex-shrink: 0;
+  color: #fff;
+  font-family:
+    Noto Sans KR,
+    sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 
 .submitButton:hover {
-    background-color: #4D7F7D;
+  background-color: #4d7f7d;
 }
 
 .hrStyle {
-    width: 445px;
-    height: 1px;
-    background-color: #848282;
-    border: none;
+  width: 445px;
+  height: 1px;
+  background-color: #848282;
+  border: none;
 }
 
 .completeText {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    width: 445px;
-    height: 60px;
-    flex-direction: row;
-    flex-shrink: 0;
-    color: #333;
-    font-family: Noto Sans KR, sans-serif;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin-right:50px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 445px;
+  height: 60px;
+  flex-direction: row;
+  flex-shrink: 0;
+  color: #333;
+  font-family:
+    Noto Sans KR,
+    sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-right: 50px;
 }
 
 .FindIdBox {
-    display: flex;
-    width: 480px;
-    height: 103px;
-    flex-direction: column;
-    justify-content: center;
-    flex-shrink: 0;
-    color: #000;
-    border: 1px solid #ccc;
-    text-align: center;
-    font-family: Noto Sans KR, sans-serif;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  display: flex;
+  width: 480px;
+  height: 103px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: #000;
+  border: 1px solid #ccc;
+  text-align: center;
+  font-family:
+    Noto Sans KR,
+    sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .alert {
-    margin-top: 20px;
-    padding: 15px;
-    width: 480px;
-    border-radius: 5px;
-    font-size: 16px;
-    text-align: center;
+  margin-top: 20px;
+  padding: 15px;
+  width: 480px;
+  border-radius: 5px;
+  font-size: 16px;
+  text-align: center;
 }
 
 .alertSuccess {
-    background-color: #d4edda;
-    color: #155724;
-    border: 1px solid #c3e6cb;
+  background-color: #d4edda;
+  color: #155724;
+  border: 1px solid #c3e6cb;
 }
 
 .alertError {
-    background-color: #f8d7da;
-    color: #721c24;
-    border: 1px solid #f5c6cb;
+  background-color: #f8d7da;
+  color: #721c24;
+  border: 1px solid #f5c6cb;
 }
 
 .hint {
-    display: flex;
-    width: 480px;
-    height: 38px;
-    flex-direction: column;
-    justify-content: center;
-    flex-shrink: 0;
-    color: #555;
-    font-family: Noto Sans KR, sans-serif;
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  display: flex;
+  width: 480px;
+  height: 38px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: #555;
+  font-family:
+    Noto Sans KR,
+    sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .submitButton.disabledButton {
-    background-color: #ccc;
-    cursor: not-allowed;
-    color: #FFFFFF;
+  background-color: #ccc;
+  cursor: not-allowed;
+  color: #ffffff;
 }
 
 .submitButton.disabledButton:hover {
-    background-color: #ccc;
+  background-color: #ccc;
 }
 
 .userIdText {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex-shrink: 0;
-    color: #000;
-    text-align: center;
-    font-family: Noto Sans KR, sans-serif;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: #000;
+  text-align: center;
+  font-family:
+    Noto Sans KR,
+    sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .userIdExplain {
-    color: #848282;
-    font-family: Noto Sans KR, sans-serif;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  color: #848282;
+  font-family:
+    Noto Sans KR,
+    sans-serif;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
